# codeagent

./: .gitignore  README.md  pyproject.toml
src/codeagent/: __init__.py  cli.py
src/codeagent/config/: __init__.py  manager.py  settings.py
src/codeagent/core/: __init__.py  agent.py  exceptions.py  prompts.py  types.py
src/codeagent/providers/: __init__.py  base.py  factory.py  huggingface.py  ollama.py  openrouter.py
src/codeagent/tools/: __init__.py  base.py  bash.py  code_analysis.py  env.py  file_edit.py  file_ops.py  file_read.py  file_write.py  git.py  glob.py  grep.py  package_managers.py  web.py
src/codeagent/utils/: __init__.py  console.py  logging.py
