[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeagent"
version = "0.1.0"
description = "AI-powered coding assistant CLI - use local models (Ollama) or cloud providers (OpenRouter, HuggingFace)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["ai", "coding", "assistant", "llm", "cli", "ollama", "openrouter", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Typing :: Typed",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "ollama>=0.3.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
codeagent = "codeagent.cli:main_entry"
ca = "codeagent.cli:main_entry"

[project.urls]
Homepage = "https://github.com/yourusername/code-agent"
Repository = "https://github.com/yourusername/code-agent"
Documentation = "https://github.com/yourusername/code-agent#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/codeagent"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["codeagent"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
